@@ -3540,7 +3540,9 @@ geniCodeParms (ast * parms, value * argVals, int *iArg, int *stack, sym_link * f
           ic->parmPush = 1;
           /* update the stack adjustment */
           *stack += getSize (IS_ARRAY (p) ? aggrToPtr (p, FALSE) : p);
-          if ((IFFUNC_ISSMALLC (ftype) || TARGET_PDK_LIKE) && !IS_AGGREGATE (p) && getSize (p) == 1) /* SmallC calling convention passes 8-bit parameters as 16-bit values. So does pdk due to stack alignment requirements */
+          if (IFFUNC_ISSMALLC (ftype) && !IS_AGGREGATE (p) && getSize (p) == 1) /* SmallC calling convention passes 8-bit parameters as 16-bit values. */
+            (*stack)++;
+          if (TARGET_PDK_LIKE && !IS_AGGREGATE (p) && getSize (p) % 2) /* So does pdk due to stack alignment requirements */
             (*stack)++;
           ADDTOCHAIN (ic);
         }
