@@ -1,7 +1,9 @@
 2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
 	* src/pdk/main.c:
-	  Limit _BitInt size to 16 for pdk (temporarily, until a stack parameter passing issue is fixed).
+	  Limit _BitInt size to 16 for pdk (temporarily, until an issue is fixed).
+	* src/pdk/main.c:
+	  Fix handling of parameters of odd size > 2.
 
 2022-03-11 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>
 
